fix(search):fix search button on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -63,6 +63,7 @@
         border-top: 1px solid var(--main-bg-color);
         border-bottom: 1px solid var(--main-bg-color);
         width: 100%;
+
     }
     .search-btn_desktop {
         display: none;
@@ -73,6 +74,7 @@
         float: left;
         border-radius: 15px;
         box-shadow: 2px 3px 5px 1px rgba(0, 0, 0, .3);
+        z-index: 100;
     }
 
     .filter {
